fix: make filters title clickable on mobile

--- a/src/components/catalog/filter/Filter.module.css
+++ b/src/components/catalog/filter/Filter.module.css
@@ -17,6 +17,10 @@
   display: flex;
   align-items: center;
   gap: 1rem;
+  border: none;
+  background-color: transparent;
+  cursor: default;
+  transition: all 0.2s ease-in-out;
 }
 
 .title {
@@ -24,19 +28,11 @@
   color: var(--text-color);
 }
 
-.open-button {
-  display: none;
-  width: 1rem;
-  height: 1rem;
-  border: none;
-  background-color: transparent;
-  cursor: pointer;
-  transition: all 0.2s ease-in-out;
-}
-
 .arrow-img {
+  display: none;
   width: 1.3rem;
   aspect-ratio: 1/1;
+  transition: all 0.2s ease-in-out;
 }
 
 .buttons-wrapper {
@@ -126,10 +122,8 @@
     padding: 0;
   }
 
-  .open-button {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  .title-wrapper {
+    cursor: pointer;
   }
 
   .buttons-wrapper,
@@ -137,9 +131,13 @@
     display: none;
   }
 
-  .open {
+  .open,
+  .arrow-img {
     display: block;
-    margin: 1rem 0;
+  }
+
+  .open {
+    margin-top: 1rem;
   }
 
   .rotate {
